// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gardener-dashboard secret-github app-auth should render the template 1`] = `
Object {
  "authentication.appId": "1",
  "authentication.clientId": "clientId",
  "authentication.clientSecret": "clientSecret",
  "authentication.installationId": "123",
  "authentication.privateKey": "privateKey",
  "webhookSecret": "webhook-secret",
}
`;

exports[`gardener-dashboard secret-github token-auth should render the template 1`] = `
Object {
  "apiVersion": "v1",
  "data": Object {
    "authentication.token": "dG9rZW4=",
    "webhookSecret": "d2ViaG9vay1zZWNyZXQ=",
  },
  "kind": "Secret",
  "metadata": Object {
    "labels": Object {
      "app.kubernetes.io/component": "dashboard",
      "app.kubernetes.io/instance": "gardener-dashboard",
      "app.kubernetes.io/managed-by": "Helm",
      "app.kubernetes.io/name": "gardener-dashboard",
      "helm.sh/chart": "gardener-dashboard-runtime-0.1.0",
    },
    "name": "gardener-dashboard-github",
    "namespace": "garden",
  },
  "type": "Opaque",
}
`;

exports[`gardener-dashboard secret-kubeconfig should render the template 1`] = `
Object {
  "apiVersion": "v1",
  "data": Object {
    "kubeconfig": "YXBpVmVyc2lvbjogdjE=",
  },
  "kind": "Secret",
  "metadata": Object {
    "labels": Object {
      "app.kubernetes.io/component": "dashboard",
      "app.kubernetes.io/instance": "gardener-dashboard",
      "app.kubernetes.io/managed-by": "Helm",
      "app.kubernetes.io/name": "gardener-dashboard",
      "helm.sh/chart": "gardener-dashboard-runtime-0.1.0",
    },
    "name": "gardener-dashboard-kubeconfig",
    "namespace": "garden",
  },
  "type": "Opaque",
}
`;

exports[`gardener-dashboard secret-oidc should render the template 1`] = `
Object {
  "apiVersion": "v1",
  "data": Object {
    "client_id": "ZGFzaGJvYXJk",
  },
  "kind": "Secret",
  "metadata": Object {
    "labels": Object {
      "app.kubernetes.io/component": "dashboard",
      "app.kubernetes.io/instance": "gardener-dashboard",
      "app.kubernetes.io/managed-by": "Helm",
      "app.kubernetes.io/name": "gardener-dashboard",
      "helm.sh/chart": "gardener-dashboard-runtime-0.1.0",
    },
    "name": "gardener-dashboard-oidc",
    "namespace": "garden",
  },
  "type": "Opaque",
}
`;

exports[`gardener-dashboard secret-oidc should render the template w/ \`client_secret\` 1`] = `
Object {
  "client_id": "ZGFzaGJvYXJk",
  "client_secret": "ZGFzaGJvYXJkU2VjcmV0",
}
`;

exports[`gardener-dashboard secret-sessionSecret should render the template with default values 1`] = `
Object {
  "apiVersion": "v1",
  "data": Object {
    "sessionSecret": "c2Vzc2lvblNlY3JldA==",
  },
  "kind": "Secret",
  "metadata": Object {
    "labels": Object {
      "app.kubernetes.io/component": "dashboard",
      "app.kubernetes.io/instance": "gardener-dashboard",
      "app.kubernetes.io/managed-by": "Helm",
      "app.kubernetes.io/name": "gardener-dashboard",
      "helm.sh/chart": "gardener-dashboard-runtime-0.1.0",
    },
    "name": "gardener-dashboard-sessionsecret",
    "namespace": "garden",
  },
  "type": "Opaque",
}
`;

exports[`gardener-dashboard secret-tls should render the templates 1`] = `
Object {
  "apiVersion": "v1",
  "data": Object {
    "tls.crt": "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCmRHeHpMbU55ZEE9PQotLS0tLUVORCBDRVJUSUZJQ0FURS0tLS0t",
    "tls.key": "LS0tLS1CRUdJTiBSU0EgUFJJVkFURSBLRVktLS0tLQpkR3h6TG10bGVRPT0KLS0tLS1FTkQgUlNBIFBSSVZBVEUgS0VZLS0tLS0=",
  },
  "kind": "Secret",
  "metadata": Object {
    "labels": Object {
      "app.kubernetes.io/component": "dashboard",
      "app.kubernetes.io/instance": "gardener-dashboard",
      "app.kubernetes.io/managed-by": "Helm",
      "app.kubernetes.io/name": "gardener-dashboard",
      "helm.sh/chart": "gardener-dashboard-runtime-0.1.0",
    },
    "name": "other-gardener-dashboard-tls",
    "namespace": "garden",
  },
  "type": "kubernetes.io/tls",
}
`;
